tests/cases/standard-library/ok/context/context-arg.ari
fn main() -> i64 {
  var zone = zone::temp(1);
  let arg = context::arg(ref mut zone, 1);
  println("{}", arg);
  return 0;
}
