tests/cases/standard-library/errors/format-precision-syntax.ari
fn main() -> i64 {
  println("{:.}", 1.0f64);
  return 0;
}
